Still no UI, JSoup fixed.

--- a/README
+++ b/README
@@ -1,4 +1,2 @@
-This is a test readme file.
-ello
-more ello
-ONE MORE
+EDITS (8/4/13):
+I've made it so the JSoup code actually works. Doesn't update the UI for the user, though.
